# post-vibe-audit

./: .cursorrules  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  llms.txt  pyproject.toml  vaf.config.example.yaml
.github/workflows/: ci.yml  vaf-action-template.yml
prompts/: pro_audit_prompt.md
scripts/: vibe_audit_packer.py
src/vaf/: __init__.py  cli.py  config.py  evidence.py  packer.py  pr_review.py  redaction.py  verifier.py
src/vaf/reporters/: __init__.py  json_reporter.py  markdown_reporter.py  sarif_reporter.py
src/vaf/scanners/: __init__.py  bandit.py  gitleaks.py  semgrep.py  trivy.py
templates/: adr_template.md  finding_template.md  scope_matrix_template.md
tests/: __init__.py  test_config.py  test_packer.py  test_redaction.py
tests/fixtures/node_project/: next.config.js  package.json
tests/fixtures/node_project/src/auth/: login.ts
tests/fixtures/python_project/: pyproject.toml
tests/fixtures/python_project/app/: main.py
tests/fixtures/secret_leak_project/.vibe_audit/: CURRENT_CONTEXT.md  evidence_index.json  secrets_report.json
tests/fixtures/secret_leak_project/src/: config.py
