[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "post-vibe-audit"
version = "3.0.0"
description = "DevSecOps framework for validating AI-generated and AI-assisted code before production."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["security", "audit", "vibe-coding", "ai", "devsecops", "owasp", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

# Minimal required dependencies — only stdlib + optional extras
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
rich = ["rich>=13.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
vaf = "vaf.cli:main"

[project.urls]
Homepage = "https://github.com/zoxknez/post-vibe-audit"
Repository = "https://github.com/zoxknez/post-vibe-audit"
"Bug Tracker" = "https://github.com/zoxknez/post-vibe-audit/issues"
Changelog = "https://github.com/zoxknez/post-vibe-audit/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vaf = ["py.typed"]

# ─── Ruff (linting + formatting) ──────────────────────────────────────────────

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "RUF", # ruff-specific
]
ignore = [
    "S101",  # assert statements (ok in tests)
    "S603",  # subprocess calls (we use subprocess intentionally)
    "S607",  # partial path to executable
    "E501",  # line too long
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "T20"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─── Mypy (type checking) ─────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
files = ["src/vaf"]

[[tool.mypy.overrides]]
module = "vaf.config"
warn_unused_ignores = false

# ─── Pytest ───────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
